--- a/templates/form.html
+++ b/templates/form.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 
 {% block head_list %}
-<script src="{% static 'js/datatable.js' %}" defer></script>
+<script src="{% static 'js/datatable.js' %}" defer type="module"></script>
 
 {% endblock %}
 
