--- a/core/erp/templates/product/form.html
+++ b/core/erp/templates/product/form.html
@@ -17,7 +17,7 @@
 
 
 <div class="card w-75 mx-auto">
-    <form action="." method="post" class="form">
+    <form action="." method="post" class="form" enctype="multipart/form-data">
         <div class="card header p-3 border-0 rounded-0">
             <h3 class="card-title">
                 <i class="{{ class_icon }}"></i>
