--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,9 @@
     <!-- jQuery -->
     <script src="{% static 'lib/adminlte/plugins/jquery/jquery.min.js' %}"></script>
     <!-- Bootstrap 4 -->
-    <script src="{% static 'lib/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- AdminLTE App -->
     <script src="{% static 'lib/adminlte/js/adminlte.min.js' %}"></script>
     <!-- Functions -->
